se suben cambios de menu responsive, muestra de notificaciones, visualizacion de politica de datos y funcionalidad del menu, se agregan iconos y fuentes

--- a/angular.json
+++ b/angular.json
@@ -58,7 +58,7 @@
 								"output": "."
 							},
 							{
-								"glob": "favicon.ico",
+								"glob": "InterRapidisimo.ico",
 								"input": "src",
 								"output": "/"
 							}
